<resources>
    <string name="app_name">Cupcake app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One CupCake</string>
    <string name="six_cupcakes">Six CupCakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="quantity">QUANTITY</string>
    <string name="pick_up_date">PICK UP DATE</string>
    <string name="flavor">FLAVOR</string>
    <string name="send">send order to another app</string>
    <string name="flavor_fragment_label">Choose Flavor</string>
    <string name="pick_up_fragment_label">Choose Pickup Date</string>
    <string name="summary_fragment_label">Order Summary</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">
        Quantity: %1$s
        \n Flavor: %2$s
        \n Pickup date: %3$s
        \n Total: %4$s
        \n\n Thank you!
    </string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
</resources>