<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="startFragment"
            type="com.lolozianas.cupecakeapp.StartFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"
                android:scaleType="center"
                app:srcCompat="@drawable/cupcake" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/order_cupcakes"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

            <Button
                android:id="@+id/button_one_cupcake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:onClick="@{()-> startFragment.orderCupcake(1)}"
                android:minWidth="250dp"
                android:text="@string/one_cupcake"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_six_cupcakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:onClick="@{()-> startFragment.orderCupcake(6)}"
                android:minWidth="250dp"
                android:text="@string/six_cupcakes"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_twelve_cupcakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:minWidth="250dp"
                android:onClick="@{()-> startFragment.orderCupcake(12)}"
                android:text="@string/twelve_cupcakes"
                android:textColor="@color/white" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:value="1"
                android:valueFrom="0"
                android:valueTo="12" />
        </LinearLayout>
    </ScrollView>
</layout>