<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="orderViewModel"
            type="com.lolozianas.cupecakeapp.model.OrderViewModel" />

        <variable
            name="pickupFragment"
            type="com.lolozianas.cupecakeapp.PickupFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PickupFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/radio_group_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radio_button_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{orderViewModel.date.equals(orderViewModel.dateOptions[0])}"
                    android:onClick="@{() -> orderViewModel.setDate(orderViewModel.dateOptions[0])}"
                    android:text="@{orderViewModel.dateOptions[0]}"
                    tools:text="@string/thursday" />

                <RadioButton
                    android:id="@+id/radio_button_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{orderViewModel.date.equals(orderViewModel.dateOptions[1])}"
                    android:onClick="@{() -> orderViewModel.setDate(orderViewModel.dateOptions[1])}"
                    android:text="@{orderViewModel.dateOptions[1]}"
                    tools:text="@string/friday" />

                <RadioButton
                    android:id="@+id/radio_button_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{orderViewModel.date.equals(orderViewModel.dateOptions[2])}"
                    android:onClick="@{() -> orderViewModel.setDate(orderViewModel.dateOptions[2])}"
                    android:text="@{orderViewModel.dateOptions[2]}"
                    tools:text="@string/saturday" />

                <RadioButton
                    android:id="@+id/radio_button_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{orderViewModel.date.equals(orderViewModel.dateOptions[3])}"
                    android:onClick="@{() -> orderViewModel.setDate(orderViewModel.dateOptions[3])}"
                    android:text="@{orderViewModel.dateOptions[3]}"
                    tools:text="@string/sunday" />
            </RadioGroup>

            <View
                android:id="@+id/view_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?attr/dividerHorizontal"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group_days" />

            <TextView
                android:id="@+id/text_view_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@{@string/subtotal_price(orderViewModel.price)}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_divider"
                tools:text="Subtotal $5.0" />

            <Button
                android:id="@+id/button_cancel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                android:onClick="@{()-> pickupFragment.cancerOrder()}"
                app:layout_constraintEnd_toStartOf="@id/button_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_subtotal" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/next"
                android:onClick="@{()-> pickupFragment.goToNextScreen()}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_cancel"
                app:layout_constraintTop_toBottomOf="@id/text_view_subtotal" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>